src/components/Gallery/CipherGallery.css
.gallery {
    width: 80%;
    place-self: center;
    margin-bottom: 30px;
}

.card {
    text-decoration: none;
    transition: box-shadow 0.3s, border 0.3s;
}

.card:hover {
    box-shadow: 0px 0px 10px tan;
    border: 1px solid sienna;
}

.cardImage {
    align-self: center;
    margin: 10px;
}

.titleBody {
    font-family: var(--header-font);
    padding-bottom: 0rem;
}

.title {
    font-size: 26px;
    margin-bottom: 0px;
}

@media screen and (max-width: 770px) {
    .title {
        font-size: 30px;
    }
}

body.dark {
    .card {
        background-color: var(--dark-mode-secondary);
        border-color: #3F3F3F;
    }

    .card:hover {
        box-shadow: 0px 0px 20px gray;
        border: 1px solid black;
    }

    .cardImage {
        opacity: 0.8;
    }

    .title {
        color: var(--dark-mode-white);
    }
}

